2008-08-15  Daniel Eddeland  <danedde@svn.gnome.org>

	* app/text/gimptextlayout-render.c: make text align correctly if
	text-box is FIXED.

2008-08-15  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintcore-stroke.c
	(gimp_paint_core_stroke_boundary)
	(gimp_paint_core_stroke_vectors): when stroking multiple segments,
	set paint_core->cur_coords to the start of each segment. It
	normally gets assigned by gimp_paint_core_start(), but that's not
	called for subsequent segments. Fixes stroking multiple segments
	with the ink tool. The other tools were not affected since they
	plot individual brushes rather than a shape from the last to the
	current coordinates. Spotted by Alexia.

2008-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mosaic.c: formatting.	

2008-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mosaic.c (polygon_add_point): converted a
	g_print() call to g_warning() and unmarked the string for
	translation.

2008-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-ico/ico-save.c: applied patch from Aurimas Juška
	that fixes an endianness issue (bug #529629).

2008-08-15  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch]: added some logic to avoid that
	an info message replaces a warning. Allow info messages to
	replace other info messages.

	* app/display/gimpdisplay-handlers.c: changed accordingly.

2008-08-15  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_save_cmd_callback): save new
	images, even if they are not marked dirty.

2008-08-14  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	use G_STRFUNC in another error message that I missed earlier.

2008-08-14  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help-browser/dialog.c (search_entry_key_press): search
	the next match when return or enter is pressed in the search
	entry.

2008-08-14  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c